--- a/app/src/main/res/drawable/splashbackground.xml
+++ b/app/src/main/res/drawable/splashbackground.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="#000000"></solid>
+    <gradient android:angle="90"
+        android:startColor="#1B2B50" android:endColor="#000000"></gradient>
+
 </shape>
