--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,7 +53,7 @@
     android:id="@+id/btMessage"
     android:layout_marginTop="20dp"
     android:layout_centerHorizontal="true"
-
+    android:background="@drawable/editext"
     />
     <TextView
         android:layout_width="wrap_content"
@@ -75,7 +75,8 @@
         android:id="@+id/btEmail"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/btMessage"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:background="@drawable/editext"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -98,6 +99,7 @@
         android:layout_below="@id/btEmail"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:background="@drawable/editext"
         />
 
     <TextView
