--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".splash"
+    tools:context="com.developer.akashkale.message.splash"
     android:orientation="vertical"
     android:background="@drawable/splashbackground">
     <ImageView
@@ -22,7 +22,7 @@
         android:textSize="28sp"
         android:layout_marginTop="-40dp"
         android:layout_gravity="center_horizontal"
-        android:textColor="#F82323"/>
+        android:textColor="#FF0303"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
